--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@neondatabase/serverless": "^0.10.4",
     "@vercel/analytics": "^1.5.0",
     "@vercel/og": "^0.6.5",
     "html2canvas-pro": "^1.5.8",
